--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&family=Roboto:wght@100;300;500;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -12,14 +13,14 @@ html {
 }
 
 body {
-  /* background-image: linear-gradient(
+  background-image: linear-gradient(
     to right,
     rgba(237, 132, 212, 1),
     rgba(45, 253, 247, 1)
-  ); */
+  );
   margin: auto;
   text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: 'Roboto', 'Times New Roman', sans-serif;
 }
 
 .titulo {
