--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -3,10 +3,11 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100%;
+  background-image: none !important;
 }
 
 .container {
-  background: rgba(58, 63, 68, 0.5);
+  /* background: rgba(58, 63, 68, 0.5); */
   border-radius: 5px;
   box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
   width: 450px;
@@ -15,22 +16,20 @@ body {
 }
 
 .logo {
-  font-family: "museo-slab";
-  font-size: 30px;
+  font-family: "Comfortaa", cursive, serif;
+  font-size: 45px;
   text-align: center;
-  margin: 30px auto;
+  margin: 0 20px;
 }
 
 .login-item {
   color: #ffff;
   margin: 20px 20px 0;
-  border-radius: 3px;
+  border-radius: 0px;
 }
 
-
-
 input {
-  border: 0;
+  /* border: 3; */
   color: inherit;
   font: inherit;
   margin: 0;
@@ -69,6 +68,30 @@ input {
 
 /**/
 
+.header-logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0px 15px 20px;
+}
+
+.header-logo:before {
+  content: "\f1b0";
+  font: 50px fontawesome;
+  color: #000;
+}
+
+.hidden {
+  /* border: 10; */
+  clip: rect(0 0 0 0);
+  height: 1px;
+  /* margin: -1px; */
+  /* overflow: hidden; */
+  /* padding: 0; */
+  position: absolute;
+  /* width: 1px; */
+}
 
 .form input[type="password"],
 .form input[type="text"],
@@ -80,9 +103,10 @@ input {
 .form-login input[type="text"],
 .form-login input[type="password"],
 .form-login input[type="submit"] {
+  border: 2px solid;
   border-radius: 0.25rem;
   padding: 1rem;
-  color: #3a3f44;
+  color: #000;
 }
 
 /* .form-login label {
@@ -104,8 +128,8 @@ input {
 .form-login input[type="text"],
 .form-login input[type="password"] {
   background-color: #ffffff;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  /* border-bottom-left-radius: 0;
+  border-top-left-radius: 0; */
 }
 
 .form-login input[type="text"]:focus,
@@ -116,7 +140,8 @@ input {
 }
 
 .form-login input[type="submit"] {
-  background-color: #00b9bc;
+  border: 2px solid #000;
+  background-color: #000;
   color: #eee;
   font-weight: bold;
   text-transform: uppercase;
@@ -124,5 +149,5 @@ input {
 
 .form-login input[type="submit"]:focus,
 .form-login input[type="submit"]:hover {
-  background-color: #197071;
+  background-color: #323333;
 }
